# herniagpt

./: .gitignore  archivo.txt  pyproject.toml
accounts/: admin.py  models.py  signals.py
accounts/migrations/: 0001_initial.py
chat/: admin.py  models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_conversation_topic.py
config/: urls.py
config/settings/: base.py  prod.py
knowledge/: admin.py  forms.py  models.py  urls.py  views.py
knowledge/migrations/: 0001_initial.py
knowledge/templatetags/: markdown_extras.py
templates/: base.html
templates/chat/: chat.html
templates/core/: home.html
templates/knowledge/: topic_detail.html  topic_form.html  topic_list.html
templates/registration/: login.html
