[project]
name = "herniagpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "django-tailwind (>=4.4.2,<5.0.0)",
    "openai (>=2.28.0,<3.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
